--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=teamDirectory
+
+spring.datasource.url=jdbc:mysql://localhost:3306/team_directory
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+spring.main.banner-mode=off
